--- a/index.html
+++ b/index.html
@@ -59,28 +59,32 @@
         </ol>
       </aside>
       <section id="media">
-        <article>
-          <h2>The Scenery in NYC</h2>
-          <p>
-            While the view in the city is beautiful, the sounds are not as
-            lovely. Below you'll see an example of the view and the sounds
-            you'll deal with in NYC on a daily basis.
-          </p>
-        </article>
-        <video controls>
-          <source
-            src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4"
-            type="video/mp4"
+        <div class="article">
+          <article>
+            <h2>The Scenery in NYC</h2>
+            <p>
+              While the view in the city is beautiful, the sounds are not as
+              lovely. Below you'll see an example of the view and the sounds
+              you'll deal with in NYC on a daily basis.
+            </p>
+          </article>
+          <video controls>
+            <source
+              src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline-timelapse.mp4"
+              type="video/mp4"
+            />
+          </video>
+        </div>
+        <div class="embed">
+          <embed
+            src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline.jpeg"
           />
-        </video>
-        <embed
-          src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-skyline.jpeg"
-        />
-        <audio controls>
-          <source
-            src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov"
-          />
-        </audio>
+          <audio controls>
+            <source
+              src="https://content.codecademy.com/courses/Semantic%20HTML/nyc-sounds.mov"
+            />
+          </audio>
+        </div>
       </section>
     </main>
     <footer>
